# models-rte-UniRel

./: .gitignore  LICENSE  setup.cfg  setup.py
src/unirel/: __init__.py  predict.py  run.py  utils.py
src/unirel/dataprocess/: data_extractor.py  data_metric.py  data_processor.py  dataset.py
src/unirel/model/: model_transformers.py  modify_bert.py
