[metadata]
name = unirel
version = 0.0.1
description = UniRel: Unified Representation and Interaction for Joint Relational Triple Extraction
author = Wei Tang, Benfeng Xu, Yuyue Zhao, Zhendong Mao, Yifeng Liu, Yong Liao, Haiyong Xie
author_email = weitangcs@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
url = https://github.com/hudsonmendes/models-rte-UniRel
keywords = relation triplet extraction, unirel, nyt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages=find:
package_dir=
    =src
install_requires =
    torch==1.7.1
    transformers==4.12.5
    numpy==1.21.4
    scikit-learn==1.0.1

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
design =
    black[jupyter]>=23.3.0
    ipywidgets>=8.1.2
dev =
    black>=23.3.0
    isort>=5.11.5
test =
    pytest>=7.4.0
    pytest-mock>=3.6.1

[flake8]
max-line-length = 180

[isort]
profile = black
line_length = 180
known_third_party =
known_first_party = unirel
import_heading_stdlib = Python Built-in Modules
import_heading_thirdparty = Third-Party Libraries
import_heading_firstparty = My Packages and Modules
import_heading_localfolder = Local Folders
src_paths = dev, src, tests

[tool:pytest]
addopts = --max-line-length=180

[coverage:run]
branch = True
